src/test/ui/consts/raw-ptr-const.stderr
error: untyped pointers are not allowed in constant
  --> $DIR/raw-ptr-const.rs:7:1
   |
LL | const CONST_RAW: *const Vec<i32> = &Vec::new() as *const _;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

